<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/ll_lay"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="200dp">

            <View
                android:layout_width="0dp"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_login"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="#000" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher_background" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xxlarge" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@drawable/edit_text_round"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/grey_60" />

            <RelativeLayout
                android:id="@+id/rl_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_smlarge">

                <EditText
                    android:id="@+id/etpassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round"
                    android:hint="@string/hint_password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="15dp"
                    android:paddingEnd="@dimen/spacing_xmlarge"
                    android:paddingRight="@dimen/spacing_xmlarge"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/grey_60" />

<!--                <ImageButton-->
<!--                    android:id="@+id/show_pass"-->
<!--                    android:layout_width="@dimen/spacing_xmlarge"-->
<!--                    android:layout_height="@dimen/spacing_xmlarge"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_alignParentRight="true"-->
<!--                    android:background="?attr/selectableItemBackground"-->
<!--                    android:src="@drawable/toggle_password_view"-->
<!--                    android:tint="@color/grey_40" />-->

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large">

                <Button
                    android:id="@+id/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="#000"
                    android:text="@string/text_bt_login"
                    android:textColor="#fff" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="invisible" />

            </RelativeLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="@dimen/spacing_medium"
                android:text="@string/forgot_password"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorTextAction" />

            <TextView
                android:id="@+id/skip_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="@dimen/spacing_medium"
                android:text="@string/skip"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorTextAction" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_60" />

                <TextView
                    android:id="@+id/tvreg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/title_activity_register"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorTextAction"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
















































